@@ -13,15 +13,6 @@ and quirks that I need to fix eventually.
 [error] WorkThread:  at org.gjt.sp.util.WorkThread.doRequests(WorkThread.java:161)
 [error] WorkThread:  at org.gjt.sp.util.WorkThread.run(WorkThread.java:135)
 
-[error] WorkThread: java.lang.NullPointerException
-[error] WorkThread:  at org.gjt.sp.jedit.browser.VFSBrowser$DirectoryLoadedAWTRequest.run(VFSBrowser.java:1527)
-[error] WorkThread:  at org.gjt.sp.util.WorkThreadPool.doAWTRequest(WorkThreadPool.java:392)
-[error] WorkThread:  at org.gjt.sp.util.WorkThreadPool.doAWTRequests(WorkThreadPool.java:380)
-[error] WorkThread:  at org.gjt.sp.util.WorkThreadPool.access$200(WorkThreadPool.java:37)
-[error] WorkThread:  at org.gjt.sp.util.WorkThreadPool$RunRequestsInAWTThread.run(WorkThreadPool.java:477)
-[error] WorkThread:  at java.awt.event.InvocationEvent.dispatch(InvocationEvent.java:178)
-[error] WorkThread:  at java.awt.EventQueue.dispatchEvent(EventQueue.java:454)
-
 [error] BeanShell: Sourced file: inline evaluation of: ``   new console.Console(view);  ;'' : Cannot access field: Console, on object: console.Console[,0,10,627x301,layout=java.awt.BorderLayout,alignmentX=null,alignmentY=null,border=,flags=9,maximumSize=,minimumSize=,preferredSize=] : at Line: 2 : in file: inline evaluation of: ``   new console.Console(view);  ;'' : console .Console 
 [error] BeanShell:  at bsh.UtilEvalError.toEvalError(UtilEvalError.java:85)
 [error] BeanShell:  at bsh.UtilEvalError.toEvalError(UtilEvalError.java:90)
@@ -84,9 +75,7 @@ it is done in most text editors
 
 - docs: no jEditLauncher
 - deferred loading mention.
-- FAQ: swing window border problems
 - addCommandPath()
--Dsun.java2d.noddraw=true
 - API thread safety
 - document optional dependencies
 - add note to documentation about exponential-time regexps
